hphp/test/zend/bad/ext/intl/tests/timezone_getID_error.php
<?php
ini_set("intl.error_level", E_WARNING);

$tz = IntlTimeZone::createTimeZone('Europe/Lisbon');
var_dump($tz->getID('foo'));
intltz_get_id(null);

